-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
# Internal Error (/oracle/valhallaExp/open/src/hotspot/share/opto/escape.cpp:693), pid=27824, tid=27838
# assert(ptn != __null) failed: node should be registered
Current CompileTask:
C2: 2724 472 java.util.stream.IntPipeline$1$1::accept (23 bytes)
Stack: [0x00007f153648c000,0x00007f153658d000], sp=0x00007f15365871d0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a416fc] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x1a4268f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xbde86a] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0xd04541] ConnectionGraph::add_final_edges(Node*)+0xb21
V [libjvm.so+0xd0dd6f] ConnectionGraph::compute_escape()+0x6bf
V [libjvm.so+0xd0f38d] ConnectionGraph::do_analysis(Compile*, PhaseIterGVN*)+0x13d
V [libjvm.so+0xb36123] Compile::Optimize()+0x943
V [libjvm.so+0xb37d90] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1310
V [libjvm.so+0x900062] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
V [libjvm.so+0xb45740] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
V [libjvm.so+0xb46429] CompileBroker::compiler_thread_loop()+0x269
V [libjvm.so+0x1960007] JavaThread::thread_main_inner()+0x287
V [libjvm.so+0x1960261] JavaThread::run()+0x191
V [libjvm.so+0x1644aca] thread_native_entry(Thread*)+0xfa
Reported by Remi Forax:
http://mail.openjdk.java.net/pipermail/valhalla-dev/2018-August/004821.html
# assert(ptn != __null) failed: node should be registered
Current CompileTask:
C2: 2724 472 java.util.stream.IntPipeline$1$1::accept (23 bytes)
Stack: [0x00007f153648c000,0x00007f153658d000], sp=0x00007f15365871d0, free space=1004k
Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1a416fc] VMError::report_and_die(int, char const*, char const*, __va_list_tag*, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x18c
V [libjvm.so+0x1a4268f] VMError::report_and_die(Thread*, void*, char const*, int, char const*, char const*, __va_list_tag*)+0x2f
V [libjvm.so+0xbde86a] report_vm_error(char const*, int, char const*, char const*, ...)+0x12a
V [libjvm.so+0xd04541] ConnectionGraph::add_final_edges(Node*)+0xb21
V [libjvm.so+0xd0dd6f] ConnectionGraph::compute_escape()+0x6bf
V [libjvm.so+0xd0f38d] ConnectionGraph::do_analysis(Compile*, PhaseIterGVN*)+0x13d
V [libjvm.so+0xb36123] Compile::Optimize()+0x943
V [libjvm.so+0xb37d90] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x1310
V [libjvm.so+0x900062] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x302
V [libjvm.so+0xb45740] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3c0
V [libjvm.so+0xb46429] CompileBroker::compiler_thread_loop()+0x269
V [libjvm.so+0x1960007] JavaThread::thread_main_inner()+0x287
V [libjvm.so+0x1960261] JavaThread::run()+0x191
V [libjvm.so+0x1644aca] thread_native_entry(Thread*)+0xfa
Reported by Remi Forax:
http://mail.openjdk.java.net/pipermail/valhalla-dev/2018-August/004821.html