8209009: [lworld] C2 compilation fails with 'assert(ptn != __null) failed: node should be registered'